force-app/main/default/objects/RW_Tower_Construction_Update__c/RW_Tower_Construction_Update__c.object-meta.xml
<CustomObject>
    <label>Tower Construction Update</label>
    <nameField>
        <label>Tower Construction Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tower Construction Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>