force-app/main/default/objects/RW_Tower_Construction_Update__c/fields/RW_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>