force-app/main/default/objects/RW_Tower_Construction_Update__c/fields/RW_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>RW_Date_Month__c</fullName>
    <formula>CASE( MONTH( RW_Date__c ) ,
1, &apos;January&apos;,
2, &apos;February&apos;,
3, &apos;March&apos;,
4, &apos;April&apos;,
5, &apos;May&apos;,
6, &apos;June&apos;,
7, &apos;July&apos;,
8, &apos;August&apos;,
9, &apos;September&apos;,
10, &apos;October&apos;,
11, &apos;November&apos;,
12, &apos;December&apos;,
&apos;None&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Month</label>
    <type>Text</type>
</CustomField>