force-app/main/default/objects/RW_Tower_Construction_Update__c/fields/RW_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>RW_Date_Year__c</fullName>
    <formula>TEXT(YEAR( RW_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Year</label>
    <type>Text</type>
</CustomField>