force-app/main/default/objects/RW_Tower_Construction_Update__c/fields/RW_Description__c.field-meta.xml
<CustomField>
    <fullName>RW_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>