force-app/main/default/objects/RW_Tower_Construction_Update__c/fields/RW_Project__c.field-meta.xml
<CustomField>
    <fullName>RW_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Tower Construction Updates</relationshipLabel>
    <relationshipName>Project_Construction_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>