force-app/main/default/objects/RW_Tower_Construction_Update__c/fields/RW_Tower_Construction_Photo_ID__c.field-meta.xml
<CustomField>
    <fullName>RW_Tower_Construction_Photo_ID__c</fullName>
    <label>Tower Construction Photo ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>